--- a/styles/style.css
+++ b/styles/style.css
@@ -22,12 +22,11 @@ html {
 }
 
 body {
-    background-image: url('./assets/images/bg.png');
+    position: relative;
+    padding-top: 82px;
+    background-image: url('../assets/images/bg.png');
     background-size: cover;
-}
-
-.body {
-    padding-top: 160px;
+    
 }
 
 .container {
@@ -35,6 +34,20 @@ body {
     margin: 0 auto;
 }
 
+.hero {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero__img-wrap {
+    position: relative;
+}
+
+.hero__img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .text__title {
     margin-bottom: 50px;
     font-size: 48px;
@@ -83,6 +96,7 @@ body {
 .footer {
     display: flex;
     padding-bottom: 30px;
+    padding-top: 42px;
 }
 
 .social {
@@ -127,12 +141,8 @@ body {
         padding-right: 15px;
     }
 
-    .hero {
-        background: top / contain no-repeat url('../assets/images/phone.png');
-    }
-
     .text {
-        padding-top: 90%;
+        /* padding-top: 90%; */
         width: 100%;
     }
 
@@ -143,8 +153,11 @@ body {
     
     .hero {
         padding-bottom: 50px;
+        display: flex;
+        flex-direction: column-reverse;
+        
     }
-    
+
     .footer {
         flex-direction: column;
         align-items: center;
@@ -159,7 +172,7 @@ body {
 
     .hero {
         min-height: 570px;
-        background: right top / 60% no-repeat url('../assets/images/phone.png');
+        /* background: right top / 60% no-repeat url('../assets/images/phone.png'); */
     }
 
     .text {
@@ -168,6 +181,13 @@ body {
 
     .hero {
         padding-bottom: 50px;
+    }
+
+    .hero__img-wrap {
+        top: 0;
+        right: 0;
+        width: 60%;
+        height: 100%;
     }
 
     .footer {
@@ -183,12 +203,20 @@ body {
 
     .hero {
         min-height: 570px;
-        background: right center / 50% no-repeat url('../assets/images/phone.png');
         padding-bottom: 130px;
     }
 
     .text {
+        padding-top: 70px;
         width: 525px;
+    }
+
+    .hero__img-wrap {
+        top: 72px;
+        right: -20px;
+        width: 50%;
+        height: 100%;
+        transform: scale(1.2);
     }
 
     .footer {
