--- a/styles/style.css
+++ b/styles/style.css
@@ -23,10 +23,8 @@ html {
 
 body {
     position: relative;
-    padding-top: 82px;
     background-image: url('../assets/images/bg.png');
     background-size: cover;
-    
 }
 
 .container {
@@ -35,6 +33,12 @@ body {
 }
 
 .hero {
+    padding-top: 82px;
+    padding-bottom: 70px;
+    overflow: hidden;
+}
+
+.flex-wrap {
     display: flex;
     justify-content: space-between;
 }
@@ -95,8 +99,8 @@ body {
 
 .footer {
     display: flex;
-    padding-bottom: 30px;
-    padding-top: 42px;
+    position: relative;
+    top: -30px;
 }
 
 .social {
@@ -151,7 +155,7 @@ body {
         text-align: center;
     }
     
-    .hero {
+    .flex-wrap {
         padding-bottom: 50px;
         display: flex;
         flex-direction: column-reverse;
@@ -170,17 +174,13 @@ body {
         padding-right: 50px;
     }
 
-    .hero {
+    .flex-wrap {
         min-height: 570px;
-        /* background: right top / 60% no-repeat url('../assets/images/phone.png'); */
+        padding-bottom: 50px;
     }
 
     .text {
         width: 50%;
-    }
-
-    .hero {
-        padding-bottom: 50px;
     }
 
     .hero__img-wrap {
@@ -201,7 +201,7 @@ body {
         padding-right: 110px;
     }
 
-    .hero {
+    .flex-wrap {
         min-height: 570px;
         padding-bottom: 130px;
     }
